# Orquestra

./: .env.example  .gitignore  AGENTS.md  README.md  requirements-orquestra.txt  requirements.txt
docs/: 00-guia-da-documentacao.md  01-instalacao-validacao-macos.md  02-manual-operacional.md  03-osint-lab.md  04-train-plane.md  05-instalador-completo-macos.md  06-settings-center-storage-fabric-router.md  07-instalador-grafico-macos.md  11-orquestra-ai-control-plane.md  12-orquestra-v2-memorygraph-workspace.md
orquestra_ai/: __init__.py  app.py  config.py  connectors.py  db.py  gateway.py  memory_candidates.py  memory_graph.py  memory_recall.py  memory_types.py  model_router.py  models.py  operations.py  osint.py  planner.py  rag_memory.py  runtime_state.py  schema_state.py  secret_store.py  services.py  session_profile.py  storage.py  trainplane.py  vector_index.py  workflow_engine.py  workspace.py
orquestra_trainplane/: app.py  config.py  models.py  services.py  worker.py
orquestra_web/: index.html  package-lock.json  package.json  vite.config.ts
orquestra_web/src-tauri/: Cargo.toml  tauri.conf.json  tauri.installer.conf.json  tauri.uninstaller.conf.json
orquestra_web/src-tauri/icons/: icon.icns
orquestra_web/src-tauri/src/: main.rs
rag/: __init__.py  benchmark.py  cli.py  common.py  evaluation.py  export.py  gateway.py  graph.py  ingestion.py  llm.py  memory.py  vectorstore.py
script/: build_and_run.sh
scripts/: bootstrap_orquestra.sh  build_orquestra_macos_graphical_installer.sh  build_orquestra_web.sh  check_orquestra_macos_installation.sh  (+15 more)
(+27 files in other folders)
